# house-prediction-model

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
scripts/python/: app.py  code.py
