[project]
name = "house-prices-prediction-model"
version = "0.1.0"
description = "A machine learning model to predict house prices using Streamlit for UI"
authors = ["Ankit <rathaurankit8840@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
]
